# ascii-game-backend

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  activator_wrapper_enhancement_plan.md  audit_traits.py  build_backend.bat.txt  check_includes.sh  config.json  config.prod.json  designdoc.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  dump_files_for_chat.bat  git-diff  keyframe_test_plan.md  main.cpp  procgen_plan.md  run_backend.bat.txt  todo.txt
.claude/: settings.json  settings.local.json
.continue/: config.json
.devcontainer/: devcontainer.json
.github/workflows/: deploy-gamma.yml  deploy-prod.yml  pr-validation.yml
algorithm/: is_equal.hpp  make_filename.hpp
build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
controllers/: ApiController.hpp  MatchApiController.cpp  MatchApiController.hpp  MatchController.cpp  MatchController.hpp
data/: Array.hpp  Bitstick.hpp  Maybe.hpp  Pointer.hpp  RackZipper.hpp
door/: ActivatorInactiveDoor.hpp  ActivatorShifter.cpp  Door.enum  DoorEnum.hpp  DoorFlyweight.cpp  DoorFlyweight.hpp
enum/: Code.enum  CodeEnum.hpp  CodedResult.hpp  Movement.enum  MovementEnum.cpp  MovementEnum.hpp  Play.enum  Turn.enum  TurnEnum.cpp  TurnEnum.hpp
generator/: Generator.enum  GeneratorEnum.hpp  GeneratorFlyweight.cpp  GeneratorFlyweight.hpp  GeneratorTutorial.cpp  GeneratorUtility.cpp  GeneratorUtility.hpp  iGenerator.cpp  iGenerator.hpp
layout/: DUNGEON_ROOM_COUNT.hpp  Layout.enum  LayoutEnum.hpp  LayoutFlyweight.cpp  LayoutFlyweight.hpp  LayoutGrid.cpp  LayoutGrid.hpp  build_room_map.cpp  iLayout.hpp
math/: Cardinal.hpp  Compass.hpp  Quad.hpp  clamp.hpp
model/: Account.cpp  Activation.hpp  Builder.cpp  Builder.hpp  Cell.cpp  Cell.hpp  Character.cpp  Character.hpp  Dungeon.cpp  Dungeon.hpp  JsonParameters.hpp  Match.cpp  Match.hpp  Player.cpp  Player.hpp  Room.cpp  Room.hpp  Titan.cpp  Titan.hpp  Turner.hpp  Wall.cpp  Wall.hpp  json_deserialize.hpp
play/: ActivateNonPlayerCharacterNullBuilder.cpp  ActivateNonPlayerCharacterNullTitan.cpp  ActivatePlayerCharacter.cpp  ActivatePlayerCharacter.hpp
rng/: Pcg.hpp  Uuid.hpp
role/: ActivatorToggler.cpp  ActivatorToggler.hpp  Role.enum  RoleEnum.hpp  RoleFlyweight.cpp  RoleFlyweight.hpp  iActivator.hpp
src/activator/: Action.enum  ActionEnum.cpp  ActionEnum.hpp  ActionFlyweight.cpp  ActionFlyweight.hpp  ActionType.hpp  Activation.cpp  Activation.hpp  ActivationAddTargetKeyframe.cpp  ActivationAddTargetKeyframe.hpp  ActivationContext.hpp  ActivatorAlterTraitAffliction.cpp  ActivatorAlterTraitAffliction.hpp  ActivatorEndTurn.cpp  ActivatorEndTurn.hpp  ActivatorMoveToDoor.cpp  ActivatorMoveToDoor.hpp  ActivatorMoveToFloor.cpp  ActivatorMoveToFloor.hpp  ActivatorRuleExecution.cpp  ActivatorRuleExecution.hpp  ActivatorUseCharacter.cpp  ActivatorUseCharacter.hpp  ActivatorUseDoor.cpp  ActivatorUseDoor.hpp  ActivatorUseInventoryItem.cpp  ActivatorUseInventoryItem.hpp  ActivatorUseLock.cpp  ActivatorUseLock.hpp  CharacterAction.cpp  CharacterAction.hpp  Preactivation.hpp  RequestContext.hpp  Rule.enum  RuleEnum.hpp  RuleFlyweight.cpp  RuleFlyweight.hpp  TargetEntity.hpp  TargetPreactivationEntity.hpp  iActivator.hpp
src/algorithm/: Iterator.hpp
src/animation/: Animation.enum  AnimationConfig.hpp  AnimationEnum.cpp  AnimationEnum.hpp  AnimationFlyweight.cpp  AnimationFlyweight.hpp  AnimationSemantic.cpp  AnimationSemantic.enum  AnimationSemantic.hpp  AnimationType.cpp  AnimationType.enum  AnimationType.hpp  AnimationTypes.cpp  AnimationTypes.hpp  Keyframe.cpp  Keyframe.hpp  KeyframeFlyweight.cpp  KeyframeFlyweight.hpp
src/behavior/: Behavior.enum  BehaviorEnum.cpp  BehaviorEnum.hpp  BehaviorEventEnum.hpp  BehaviorFlyweight.cpp  BehaviorFlyweight.hpp
src/chest/: ActivatorChestLockKey.cpp  ActivatorChestLockKey.hpp  ActivatorCritterBite.cpp  ActivatorCritterBite.hpp  ActivatorLootChest.cpp  ActivatorLootChest.hpp  ActivatorUseChestLock.cpp  ActivatorUseChestLock.hpp  Chest.cpp  Chest.hpp  Lock.enum  LockEnum.cpp  LockEnum.hpp  LockFlyweight.cpp  LockFlyweight.hpp
src/controllers/: AccountController.cpp  AccountController.hpp  AccountRepository.cpp  AccountRepository.hpp  ApiController.cpp  ApiController.hpp  MatchController.cpp  MatchController.hpp  MatchRepository.cpp  MatchRepository.hpp
src/damage/: ActivatorAttack.cpp  ActivatorAttack.hpp  ActivatorDamage.cpp  ActivatorDamage.hpp  ActivatorDamageBite.cpp  ActivatorDamageBite.hpp  ActivatorDamageCold.cpp  ActivatorDamageCold.hpp  ActivatorDamageCrush.cpp  ActivatorDamageCrush.hpp  ActivatorDamageElectric.cpp  ActivatorDamageElectric.hpp  ActivatorDamageFire.cpp  ActivatorDamageFire.hpp  ActivatorDamagePierce.cpp  ActivatorDamagePierce.hpp  DamageAttr.enum  DamageAttrBits.cpp  DamageAttrBits.hpp  DamageAttrEnum.hpp  DamageFlyweight.cpp  DamageFlyweight.hpp  DamageType.enum  DamageTypeBits.cpp  DamageTypeBits.hpp  DamageTypeEnum.hpp
src/data/: Address.hpp  Array.hpp  AssociatedPriorityMinQueue.hpp  Bitstick.hpp  Bitstick32.hpp  Cake.hpp  CyclicalRack.hpp  LRUMap.hpp  Map.hpp  Maybe.hpp  Pointer.hpp  Rack.hpp  RackZipper.hpp  Text.hpp  generateRandomArray.hpp
src/door/: ActivatorBounceFloor.cpp  ActivatorBounceFloor.hpp  ActivatorBounceLock.cpp  ActivatorBounceLock.hpp  ActivatorEffect.hpp  ActivatorElevator.cpp  ActivatorElevator.hpp  ActivatorExitDungeon.cpp  ActivatorExitDungeon.hpp  ActivatorGiveItem.cpp  ActivatorGiveItem.hpp  ActivatorInactiveDoor.cpp  ActivatorInactiveDoor.hpp  ActivatorJailer.cpp  ActivatorJailer.hpp  ActivatorKeeper.cpp  ActivatorKeeper.hpp  ActivatorLadder.cpp  ActivatorLadder.hpp  ActivatorLightningRod.cpp  (+26 more)
store/: FileStore.cpp  FileStore.hpp  MatchStoreFile.cpp  MatchStoreFile.hpp  iMatchStore.hpp  iStore.hpp
test/: ActivationAddTargetKeyframeTests.cpp  CharacterSheetApiViewTests.cpp  CombatTests.cpp  EventLogTests.cpp  MatchTest4D.cpp  MatchTests.cpp  TestController.cpp  TestController.hpp  TraitModifierTests.cpp  main.cpp
vector/: int4_to_json.cpp  int4_to_json.hpp
view/: AccountView.hpp
(+261 files in other folders)
